--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
               отдых в Турции в ПОДАРОК!
             </span>
             <br />
-            1. Представьте, как ваша работа превращается в удовольствие: <br />
-            2. Вы находите лучшие товары для своего бизнеса <br />
-            3. И отправляетесь в сказочный тур Анталия -
-            Памуккале-Каппадокия-Анталия
+            Представьте, как ваша работа превращается в удовольствие: <br />
+            1. Вы находите лучшие товары для своего бизнеса <br />
+            2. И отправляетесь в сказочный тур Анталия - Памуккале - Каппадокия
+            - Анталия
           </p>
         </div>
         <div class="relative">
@@ -129,12 +129,10 @@
             <ion-icon name="chevron-down-outline"></ion-icon>
           </p>
         </div>
-        
       </div>
     </header>
 
     <section
-      id="down"
       id="turkey-tour"
       class="relative bg-cover bg-center text-white py-16"
     >
@@ -190,24 +188,17 @@
         </div>
       </div>
     </section>
-    <div class="container mx-auto px-6 md:px-12 text-center">
-      <a
-        href="https://wa.me/375297174741"
-        target="_blank"
-        class="inline-block px-4 py-4 text-lg font-bold text-white bg-red-600 hover:bg-red-500 rounded-full transition duration-300 shadow-lg"
-        aria-label="Написать в WhatsApp"
-      >
-        Связаться со мной
-      </a>
-    </div>
     <section
       id="services"
       class="rounded-3xl"
       style="background-image: url(/img/photo_2024-12-03_15-37-42.jpg)"
     >
-      <div class="bg-opacity-50 bg-black py-12 px-6 mt-20 rounded-3xl">
+      <div
+        id="down"
+        class="bg-opacity-50 bg-black py-12 px-6 mt-20 rounded-3xl"
+      >
         <h2 class="text-4xl font-serif text-center text-white mb-12">
-          Мои услуги — Ваши выгоды
+          Мои услуги
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
           <!-- Услуга 1 -->
@@ -215,15 +206,15 @@
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border rounded-3xl hover:shadow-xl transition duration-300"
           >
             <h3 class="text-2xl font-serif text-slate-800">
-              Оптовые закупки товаров<br />
+              Оптовые поставки<br />
               <span class="font-thin text-sm leading-none">
                 Зачем искать поставщиков самостоятельно и тратить на это время
               </span>
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
             <p class="text-gray-700 font-[100] text-md">
-              - Найду женскую, мужскую и детскую одежду, включая
-              модест-коллекции
+              - Подберу под ваш запрос Женскую, мужскую и детскую одежду Кожаные
+              куртки, сумки и обувь Текстиль для дома
               <br />
               - Подберу текстиль: постельное белье, полотенца, шторы, ковры
               <br />
@@ -240,7 +231,7 @@
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border rounded-3xl hover:shadow-xl transition duration-300"
           >
             <h3 class="text-2xl font-serif text-slate-800">
-              Производство товаров под вашим брендом<br />
+              Производство под вашим брендом<br />
               <span class="text-sm font-thin leading-1"
                 >Мечтаете создать свою коллекцию<span class="font-medium"
                   >?!</span
@@ -249,7 +240,7 @@
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
             <p class="text-gray-700 font-[100] text-md">
-              - Найду фабрику для работы по вашим лекалам или фото
+              - Найду фабрику для работы по вашим образцам
               <br />
               - Организую пошив тестового образца <br />
               - Лично проверю каждый этап: от материалов до упаковки
@@ -263,10 +254,9 @@
             <h3 class="text-2xl font-serif text-slate-800">
               Личное сопровождение на закупках
               <span class="text-sm font-thin leading-1"
-                >Для тех, кто хочет всё видеть своими глазами<span
-                  class="font-medium"
-                  >:</span
-                >
+                ><br />Пройдем с Вами по заранее оговоренным магазинам и
+                фабрикам <br />Вместе с Вами закупим одежду или посетим
+                фабрики<span class="font-medium">:</span>
               </span>
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
@@ -279,9 +269,25 @@
               клиентов
             </p>
           </div>
+          <div
+            class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border rounded-3xl hover:shadow-xl transition duration-300"
+          ></div>
+          <h3 class="text-2xl font-serif text-slate-800">
+            Подбор карго и отправка заказа
+          </h3>
         </div>
       </div>
     </section>
+    <div class="container mx-auto px-6 md:px-12 text-center">
+      <a
+        href="https://wa.me/375297174741"
+        target="_blank"
+        class="inline-block px-4 py-4 text-lg font-bold text-white bg-red-600 hover:bg-red-500 rounded-full transition duration-300 shadow-lg"
+        aria-label="Написать в WhatsApp"
+      >
+        Связаться со мной
+      </a>
+    </div>
     <h2 class="text-4xl font-serif text-center text-gray-800 mt-12">
       Товары, с которыми я работаю
     </h2>
@@ -754,24 +760,39 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div class="p-6 bg-white shadow-lg rounded-xl">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
-            Оптовые закупки
+            Консультация
           </h3>
-          <p class="text-lg text-gray-700">
-            <strong>До $5000:</strong> $200 <br />
-            <strong>От $5001:</strong> 5% от суммы заказа.
-          </p>
+          <p class="text-lg text-gray-700">$50</p>
         </div>
         <div class="p-6 bg-white shadow-lg rounded-xl">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
-            Производство под брендом
+            Минимальная сумма закупки
           </h3>
-          <p class="text-lg text-gray-700">$200 + 1,5–5% от суммы заказа</p>
+          <p class="text-lg text-gray-700">$500</p>
+        </div>
+        <div class="p-6 bg-white shadow-lg rounded-xl">
+          <h3 class="text-2xl font-semibold text-gray-800 mb-2">
+            Закупка одежды до $2000
+          </h3>
+          <p class="text-lg text-gray-700">10% от суммы заказа</p>
+        </div>
+        <div class="p-6 bg-white shadow-lg rounded-xl">
+          <h3 class="text-2xl font-semibold text-gray-800 mb-2">
+            Закупка одежды от $2000 до $5000
+          </h3>
+          <p class="text-lg text-gray-700">7% от суммы заказа</p>
+        </div>
+        <div class="p-6 bg-white shadow-lg rounded-xl">
+          <h3 class="text-2xl font-semibold text-gray-800 mb-2">
+            Закупка одежды от $5000
+          </h3>
+          <p class="text-lg text-gray-700">Фиксированная стоимость: $400</p>
         </div>
         <div class="p-6 bg-white shadow-lg rounded-xl">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Личное сопровождение
           </h3>
-          <p class="text-lg text-gray-700">$200 в день</p>
+          <p class="text-lg text-gray-700">$150 в день</p>
         </div>
       </div>
     </section>
@@ -783,9 +804,65 @@
         class="inline-block px-8 py-4 text-xl font-extrabold text-white bg-red-500 hover:bg-green-600 rounded-full transition duration-300 shadow-lg"
         aria-label="Написать в WhatsApp"
       >
-        Закупить от 1500$ и получить тур в Турцию в подарок!
+        Закупить от 3000$ и получить тур в Турцию в подарок!
       </a>
     </div>
+    <section
+      id="turkey-tour"
+      class="relative bg-cover bg-center text-white py-16"
+    >
+      <div class="bg-cover" style="background-image: url('./img/yt.png')">
+        <div
+          class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 rounded-lg"
+        >
+          <h2 class="text-4xl font-serif font-bold mb-6">
+            Что включено в ваш подарок — тур в Турцию?
+          </h2>
+          <p class="text-lg font-light mb-8">
+            🌟 Работайте выгодно и отдыхайте незабываемо!
+          </p>
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-left"
+          >
+            <!-- Описание тура -->
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
+              <h3 class="text-xl font-bold text-orange-600 mb-2">
+                Продолжительность:
+              </h3>
+              <p>8 дней / 7 ночей</p>
+            </div>
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
+              <h3 class="text-xl font-bold text-orange-600 mb-2">
+                Проживание:
+              </h3>
+              <p>В отелях 4–5*</p>
+            </div>
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
+              <h3 class="text-xl font-bold text-orange-600 mb-2">Питание:</h3>
+              <p>Завтраки (шведский стол)</p>
+            </div>
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
+              <h3 class="text-xl font-bold text-orange-600 mb-2">Экскурсии:</h3>
+              <ul class="list-disc pl-4">
+                <li>Обзорная экскурсия по Анталии</li>
+                <li>Двухдневная поездка в Каппадокию</li>
+                <li>Экскурсия в Памуккале</li>
+              </ul>
+            </div>
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
+              <h3 class="text-xl font-bold text-orange-600 mb-2">Трансферы:</h3>
+              <p>По всему маршруту</p>
+            </div>
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
+              <h3 class="text-xl font-bold text-orange-600 mb-2">
+                Профессиональный гид:
+              </h3>
+              <p>Историк от Министерства Туризма</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <div class="flex items-center justify-center sm:p-10 md:p-20 mt-10">
       <div class="relative w-full" style="padding-bottom: 56.25%">
         <iframe
