--- a/index.html
+++ b/index.html
@@ -131,63 +131,6 @@
         </div>
       </div>
     </header>
-
-    <section
-      id="turkey-tour"
-      class="relative bg-cover bg-center text-white py-16"
-    >
-      <div class="bg-cover" style="background-image: url('./img/yt.png')">
-        <div
-          class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 rounded-lg"
-        >
-          <h2 class="text-4xl font-serif font-bold mb-6">
-            Что включено в ваш подарок — тур в Турцию?
-          </h2>
-          <p class="text-lg font-light mb-8">
-            🌟 Работайте выгодно и отдыхайте незабываемо!
-          </p>
-          <div
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-left"
-          >
-            <!-- Описание тура -->
-            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
-              <h3 class="text-xl font-bold text-orange-600 mb-2">
-                Продолжительность:
-              </h3>
-              <p>8 дней / 7 ночей</p>
-            </div>
-            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
-              <h3 class="text-xl font-bold text-orange-600 mb-2">
-                Проживание:
-              </h3>
-              <p>В отелях 4–5*</p>
-            </div>
-            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
-              <h3 class="text-xl font-bold text-orange-600 mb-2">Питание:</h3>
-              <p>Завтраки (шведский стол)</p>
-            </div>
-            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
-              <h3 class="text-xl font-bold text-orange-600 mb-2">Экскурсии:</h3>
-              <ul class="list-disc pl-4">
-                <li>Обзорная экскурсия по Анталии</li>
-                <li>Двухдневная поездка в Каппадокию</li>
-                <li>Экскурсия в Памуккале</li>
-              </ul>
-            </div>
-            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
-              <h3 class="text-xl font-bold text-orange-600 mb-2">Трансферы:</h3>
-              <p>По всему маршруту</p>
-            </div>
-            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
-              <h3 class="text-xl font-bold text-orange-600 mb-2">
-                Профессиональный гид:
-              </h3>
-              <p>Историк от Министерства Туризма</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     <section
       id="services"
       class="rounded-3xl"
@@ -271,14 +214,15 @@
           </div>
           <div
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border rounded-3xl hover:shadow-xl transition duration-300"
-          ></div>
+          >
           <h3 class="text-2xl font-serif text-slate-800">
             Подбор карго и отправка заказа
           </h3>
         </div>
+        </div>
       </div>
     </section>
-    <div class="container mx-auto px-6 md:px-12 text-center">
+    <div class="container mx-auto px-6 md:px-12 text-center mt-16">
       <a
         href="https://wa.me/375297174741"
         target="_blank"
