--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
     </nav>
 
-    <header id="up" class="header-background relative">
+    <header id="up" class="header-background relative" style="background-image: url(./img/5.jpg);">
       <div
         class="h-screen bg-opacity-30 bg-black flex items-left justify-center flex-col"
       >
