--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             Я — Юля, Ваш личный байер по оптовым закупкам в Турции
           </h1>
           <p class="max-md:leading-5 text-center animate-fadeInUp mt-4 text-gray-100 text-md md:text-lg font-serif font-semibold ">
-            Купите товары на сумму от $1500 и получите невероятный бонус —
+            Купите товары на сумму от $3000 и получите невероятный бонус —
             отдых в Турции в ПОДАРОК!
           </p>
           <p
@@ -156,12 +156,10 @@
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
             <p class="text-gray-700 font-[100] text-md">
-              - Подберу под ваш запрос Женскую, мужскую и детскую одежду Кожаные
-              куртки, сумки и обувь Текстиль для дома
-              <br />
-              - Подберу текстиль: постельное белье, полотенца, шторы, ковры
-              <br />
-              - Организую закупку аксессуаров для дома и ванной комнаты
+              Подберу под ваш запрос: <br>
+- Женскую, мужскую и детскую одежду <br>
+- Кожаные куртки, сумки и обувь <br>
+- Текстиль для дома
             </p>
             <div class="w-1/2 h-[1px] bg-slate-500 mt-2"></div>
             <h3 class="text-2xl font-serif text-slate-800">Мои гарантии:</h3>
@@ -198,7 +196,7 @@
               Личное сопровождение на закупках
               <span class="text-sm font-thin leading-1"
                 ><br />Пройдем с Вами по заранее оговоренным магазинам и
-                фабрикам <br />Вместе с Вами закупим одежду или посетим
+                фабрикам <br />вместе с Вами закупим одежду или посетим
                 фабрики<span class="font-medium">:</span>
               </span>
             </h3>
@@ -630,7 +628,7 @@
               ✅ <strong>Более 10 лет работы с Турецкими фабриками</strong>
             </li>
             <li class="text-xl font-medium text-gray-800">
-              ✅ <strong>2Большая база производителей</strong> только лучшие
+              ✅ <strong>Большая база производителей</strong> только лучшие
               поставщики.
             </li>
             <li class="text-xl font-medium text-gray-800">
@@ -752,7 +750,7 @@
       id="turkey-tour"
       class="relative bg-cover bg-center text-white py-16"
     >
-      <div class="bg-cover" style="background-image: url('./img/yt.png')">
+      <div class="bg-cover" style="background-image: url('./img/yt.jpg')">
         <div
           class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 md:rounded-lg"
         >
