--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
     </section>
 
     <section
-      class="bg-cove md:rounded-3xl"
+      class="bg-cover md:rounded-3xl"
       style="background-image: url(./img/photo_2024-12-03_15-50.jpg)"
     >
       <div class="bg-opacity-20 bg-black my-16 py-12 px-6 md:rounded-3xl">
