--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         });
       });
     </script>
-    <nav class="fixed top-0 left-0 w-full bg-white z-10 flex py-3 px-6">
+    <nav class="relative top-0 left-0 w-full bg-white z-10 flex py-3 px-6">
       <div class="container mx-auto flex justify-between items-center">
         <a
           href="#"
@@ -76,16 +76,16 @@
         <ul
           class="menu flex space-x-4 mt-1 max-[708px]:space-y-2 menu items-center"
         >
-          <li class="text-zinc-700 text-md font-serif hover:text-zinc-800 mr-2">
+          <li class="text-zinc-700 text-md font-serif font-semibold hover:text-zinc-800 mr-2">
             <a href="#services">Услуги</a>
           </li>
-          <li class="text-zinc-700 text-md font-serif hover:text-zinc-800 mr-2">
+          <li class="text-zinc-700 text-md font-serif font-semibold hover:text-zinc-800 mr-2">
             <a href="#reviews">Отзывы</a>
           </li>
-          <li class="text-zinc-700 text-md font-serif hover:text-zinc-800 mr-2">
+          <li class="text-zinc-700 text-md font-serif font-semibold hover:text-zinc-800 mr-2">
             <a href="#pricing">Стоимость</a>
           </li>
-          <li class="text-zinc-700 text-md font-serif hover:text-zinc-800 mr-2">
+          <li class="text-zinc-700 text-md font-serif font-semibold hover:text-zinc-800 mr-2">
             <a href="#contact">Контакты</a>
           </li>
         </ul>
