--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div
         class="h-screen bg-opacity-30 bg-black flex items-left justify-center flex-col"
       >
-        <div class="text-center px-10 max-[496px]:px-4 mt-40 md:mt-60">
+        <div class="text-center px-10 max-[496px]:px-4 mt-28 md:mt-60">
           <h1
             class="leading-7 text-center font-serif animate-fadeInUp text-white text-3xl md:text-5xl"
           >
@@ -121,10 +121,16 @@
             быстро и легко оформить заказ на товары напрямую с турецких фабрик!
           </p>
           <p
+            class="max-md:leading-5 text-center animate-fadeInUp mt-4 text-gray-100 text-md md:text-lg font-serif font-semibold"
+          >
+            Специальное предложение для оптовых покупателей: <br />
+            Сделайте закуп на сумму от $3000 и получите невероятный бонус <br />
+            —
+            <span class="border-2"> отдых в Турции на двоих в ПОДАРОК! </span>
+          </p>
+          <p
             class="max-md:leading-4 text-center animate-fadeInUp text-gray-100 font-serif text-md md:text-lg"
-          >Бонус для оптовых покупателей: <br>
-          Сделайте закуп на сумму от $3000 и получите невероятный бонус — отдых в Турции на двоих в ПОДАРОК!
-          
+          >
             <br />
             Представьте, как ваша работа превращается в удовольствие: <br />
             1. Вы находите лучшие товары для своего бизнеса <br />
@@ -853,11 +859,11 @@
             📩 Напишите мне прямо сейчас! Я помогу превратить ваши бизнес-идеи в
             реальность <br />✨ Турция - не только бизнес, но и отдых!
             <br />
-            Телефон:
-            <a href="tel:+375297174741" class="underline hover:text-gray-300"
-              >+375297174741</a
+            📞:
+            <a href="tel:+905313557039" class="underline hover:text-gray-300"
+              >+905313557039</a
             ><br />
-            Email:
+            📧:
             <a
               href="julizturkey@gmail.com"
               class="underline hover:text-gray-300"
@@ -902,6 +908,12 @@
                 class="text-3xl hover:text-gray-300"
               ></ion-icon>
             </a>
+            <a href="https://t.me/JulizTurkey" target="_blank">
+              <ion-icon
+                name="paper-plane-outline"
+                class="text-3xl hover:text-gray-300"
+              ></ion-icon>
+            </a>
           </div>
         </div>
       </div>
@@ -909,7 +921,7 @@
     <div
       class="border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full px-4"
     >
-      © 2024 Julizturkey. Все права защищены. <br />
+      © 2024 Julizturkey.pro . Все права защищены. <br />
       Cайт разработан командой <br />
       <a
         class="font-semibold text-xs text-zinc-300"
