--- a/index.html
+++ b/index.html
@@ -859,11 +859,11 @@
             📩 Напишите мне прямо сейчас! Я помогу превратить ваши бизнес-идеи в
             реальность <br />✨ Турция - не только бизнес, но и отдых!
             <br />
-            📞:
+            📞
             <a href="tel:+905313557039" class="underline hover:text-gray-300"
               >+905313557039</a
             ><br />
-            📧:
+            📧
             <a
               href="julizturkey@gmail.com"
               class="underline hover:text-gray-300"
@@ -921,7 +921,7 @@
     <div
       class="border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full px-4"
     >
-      © 2024 Julizturkey.pro . Все права защищены. <br />
+      © 2024 Julizturkey.pro Все права защищены. <br />
       Cайт разработан командой <br />
       <a
         class="font-semibold text-xs text-zinc-300"
