--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
 
         <div>
           <ul class="space-y-2">
-            <li class="text-2xl font-medium text-gray-800">
+            <li class="text-xl font-medium text-gray-800">
               ✅ <strong>Более 10 лет работы с Турецкими фабриками</strong>
             </li>
             <li class="text-xl font-medium text-gray-800">
