--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
       class="bg-cover md:rounded-3xl"
       style="background-image: url(./img/photo_2024-12-03_15-50.jpg)"
     >
-      <div class="bg-opacity-20 bg-black my-16 py-12 px-6 md:rounded-3xl">
+      <div class="bg-opacity-50 bg-black my-16 py-12 px-6 md:rounded-3xl">
         <h2 class="text-4xl font-serif text-center text-gray-100 mb-12">
           Как начать сотрудничество?
         </h2>
@@ -782,7 +782,8 @@
             Что включено в ваш подарок — тур в Турцию?
           </h2>
           <p class="text-lg font-light mb-8">
-            🌟 Работайте выгодно и отдыхайте незабываемо!
+            🌟 Экскурсионный тур на 2-х персон в Турцию
+            “Анталия-Памуккале-Каппадокия”
           </p>
           <div
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-left"
