--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <h1
             class="text-center gradient-text animate-fadeInUp text-white text-xl md:text-2xl mt-8 glow-effect"
           >
-            Заманчиво? Тогда читайте дальше!
+            Заманчиво? Подробнее ниже
           </h1>
           <p
             id="scrollDownBtn"
@@ -173,7 +173,7 @@
             <h3 class="text-2xl font-serif text-slate-800">
               Оптовые поставки<br />
               <span class="font-thin text-sm leading-none">
-                Зачем искать поставщиков самостоятельно и тратить на это время
+                Зачем искать поставщиков самостоятельно и тратить на это время?
               </span>
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
