--- a/index.html
+++ b/index.html
@@ -154,6 +154,74 @@
       </div>
     </header>
     <section
+      id="turkey-tour"
+      class="relative bg-cover bg-center text-white py-16"
+    >
+      <div class="bg-cover" style="background-image: url('./img/yt.jpg')">
+        <div
+          class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 md:rounded-lg"
+        >
+          <h2 class="text-4xl font-serif font-bold mb-6">
+            Я очень люблю Турцию и особенно Стамбул и сейчас я могу предложить
+            Вам увидеть это все своими глазами
+          </h2>
+          <p class="text-lg font-light mb-8">
+            🌟 Экскурсионный тур на 2-х персон в Турцию
+            “Анталия-Памуккале-Каппадокия”
+          </p>
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-left"
+          >
+            <!-- Описание тура -->
+            <div
+              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
+            >
+              <h3 class="text-2xl font-bold text-zinc-800 mb-2">
+                Продолжительность:
+              </h3>
+              <p>8 дней / 7 ночей</p>
+            </div>
+            <div
+              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
+            >
+              <h3 class="text-2xl font-bold text-zinc-800 mb-2">Проживание:</h3>
+              <p>В отелях 4–5*</p>
+            </div>
+            <div
+              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
+            >
+              <h3 class="text-2xl font-bold text-zinc-800 mb-2">Питание:</h3>
+              <p>Завтраки (шведский стол)</p>
+            </div>
+            <div
+              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
+            >
+              <h3 class="text-2xl font-bold text-zinc-800 mb-2">Экскурсии:</h3>
+              <ul class="list-disc pl-4">
+                <li>Обзорная экскурсия по Анталии</li>
+                <li>Двухдневная поездка в Каппадокию</li>
+                <li>Экскурсия в Памуккале</li>
+              </ul>
+            </div>
+            <div
+              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
+            >
+              <h3 class="text-2xl font-bold text-zinc-800 mb-2">Трансферы:</h3>
+              <p>По всему маршруту</p>
+            </div>
+            <div
+              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
+            >
+              <h3 class="text-2xl font-bold text-zinc-800 mb-2">
+                Профессиональный гид:
+              </h3>
+              <p>Историк от Министерства Туризма</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section
       id="services"
       class="md:rounded-3xl"
       style="background-image: url(/img/photo_2024-12-03_15-37-42.jpg)"
@@ -770,73 +838,7 @@
         Закупить от 3000$ и получить тур в Турцию в подарок!
       </a>
     </div>
-    <section
-      id="turkey-tour"
-      class="relative bg-cover bg-center text-white py-16"
-    >
-      <div class="bg-cover" style="background-image: url('./img/yt.jpg')">
-        <div
-          class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 md:rounded-lg"
-        >
-          <h2 class="text-4xl font-serif font-bold mb-6">
-            Что включено в ваш подарок — тур в Турцию?
-          </h2>
-          <p class="text-lg font-light mb-8">
-            🌟 Экскурсионный тур на 2-х персон в Турцию
-            “Анталия-Памуккале-Каппадокия”
-          </p>
-          <div
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-left"
-          >
-            <!-- Описание тура -->
-            <div
-              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
-            >
-              <h3 class="text-2xl font-bold text-zinc-800 mb-2">
-                Продолжительность:
-              </h3>
-              <p>8 дней / 7 ночей</p>
-            </div>
-            <div
-              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
-            >
-              <h3 class="text-2xl font-bold text-zinc-800 mb-2">Проживание:</h3>
-              <p>В отелях 4–5*</p>
-            </div>
-            <div
-              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
-            >
-              <h3 class="text-2xl font-bold text-zinc-800 mb-2">Питание:</h3>
-              <p>Завтраки (шведский стол)</p>
-            </div>
-            <div
-              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
-            >
-              <h3 class="text-2xl font-bold text-zinc-800 mb-2">Экскурсии:</h3>
-              <ul class="list-disc pl-4">
-                <li>Обзорная экскурсия по Анталии</li>
-                <li>Двухдневная поездка в Каппадокию</li>
-                <li>Экскурсия в Памуккале</li>
-              </ul>
-            </div>
-            <div
-              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
-            >
-              <h3 class="text-2xl font-bold text-zinc-800 mb-2">Трансферы:</h3>
-              <p>По всему маршруту</p>
-            </div>
-            <div
-              class="p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl"
-            >
-              <h3 class="text-2xl font-bold text-zinc-800 mb-2">
-                Профессиональный гид:
-              </h3>
-              <p>Историк от Министерства Туризма</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <div class="flex items-center justify-center sm:p-10 md:p-20 mt-10">
       <div class="relative w-full" style="padding-bottom: 56.25%">
         <iframe
