--- a/index.html
+++ b/index.html
@@ -112,30 +112,16 @@
           <h1
             class="leading-7 text-center font-serif animate-fadeInUp text-white text-3xl md:text-5xl"
           >
-            Я - Юля, ваш личный байер в Турции
+            Я — Юля, Ваш личный байер по оптовым закупкам в Турции
           </h1>
           <p
-            class="max-md:leading-5 text-center animate-fadeInUp mt-4 text-gray-100 text-md md:text-lg font-serif font-semibold"
+            class="max-md:leading-5 text-center animate-fadeInUp mt-4 text-gray-100 text-xl md:text-2xl font-serif font-semibold"
           >
-            Забудьте о лишних тратах, потерянном времени и нервах! Помогу вам
-            быстро и легко оформить заказ на товары напрямую с турецких фабрик!
-          </p>
-          <p
-            class="max-md:leading-5 text-center animate-fadeInUp mt-4 text-gray-100 text-md md:text-lg font-serif font-semibold"
-          >
-            Специальное предложение для оптовых покупателей: <br />
-            Сделайте закуп на сумму от $3000 и получите невероятный бонус <br />
-            —
-            <span class="border-2"> отдых в Турции на двоих в ПОДАРОК! </span>
-          </p>
-          <p
-            class="max-md:leading-4 text-center animate-fadeInUp text-gray-100 font-serif text-md md:text-lg"
-          >
-            <br />
-            Представьте, как ваша работа превращается в удовольствие: <br />
-            1. Вы находите лучшие товары для своего бизнеса <br />
-            2. И отправляетесь в сказочный тур Анталия - Памуккале - Каппадокия
-            - Анталия
+            Мои услуги: <br />
+            Оптовые поставки <br />
+            Производство под вашим брендом <br />
+            Личное сопровождение на закупках <br />
+            Подбор карго и отправка заказа <br />
           </p>
         </div>
         <div class="relative">
