--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div
         class="h-screen bg-opacity-30 bg-black flex items-left justify-center flex-col"
       >
-        <div class="text-center px-10 max-[496px]:px-4 mt-28 md:mt-60">
+        <div class="text-center px-10 max-[496px]:px-4 mt-40 md:mt-60">
           <h1
             class="leading-7 text-center font-serif animate-fadeInUp text-white text-3xl md:text-5xl"
           >
@@ -128,7 +128,7 @@
           <h1
             class="text-center gradient-text animate-fadeInUp text-white text-xl md:text-2xl mt-8 glow-effect"
           >
-            Заманчиво? Подробнее ниже
+            Услуги - Подробнее ниже
           </h1>
           <p
             id="scrollDownBtn"
@@ -141,19 +141,23 @@
     </header>
     <section
       id="turkey-tour"
-      class="relative bg-cover bg-center text-white py-16"
+      class="bg-cover bg-center text-white py-16"
     >
+    <h2 class="text-black text-center text-4xl font-serif font-bold mb-4">
+      Я очень люблю Турцию и особенно Стамбул и сейчас я могу предложить Вам
+      увидеть это все своими глазами
+    </h2>
       <div class="bg-cover" style="background-image: url('./img/yt.jpg')">
         <div
           class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 md:rounded-lg"
         >
-          <h2 class="text-4xl font-serif font-bold mb-6">
-            Я очень люблю Турцию и особенно Стамбул и сейчас я могу предложить
-            Вам увидеть это все своими глазами
+          <h2 class="text-xl font-bold mb-6">
+            Специальное предложение для оптовых покупателей: Сделайте закуп на
+            сумму от $3000 и получите невероятный бонус — отдых в Турции на
+            двоих в ПОДАРОК!
           </h2>
           <p class="text-lg font-light mb-8">
-            🌟 Экскурсионный тур на 2-х персон в Турцию
-            “Анталия-Памуккале-Каппадокия”
+            🌟 Экскурсионный тур “Анталия-Памуккале-Каппадокия”
           </p>
           <div
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-left"
