--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
             class="max-md:leading-5 text-center animate-fadeInUp mt-4 text-gray-100 text-xl md:text-2xl font-serif font-semibold"
           >
             Мои услуги: <br />
-            Оптовые поставки <br />
-            Производство под вашим брендом <br />
-            Личное сопровождение на закупках <br />
-            Подбор карго и отправка заказа <br />
+            - Оптовые поставки <br />
+            - Производство под вашим брендом <br />
+            - Личное сопровождение на закупках <br />
+            - Подбор карго и отправка заказа <br />
           </p>
         </div>
         <div class="relative">
           <h1
             class="text-center gradient-text animate-fadeInUp text-white text-xl md:text-2xl mt-8 glow-effect"
           >
-            Услуги - Подробнее ниже
+            Подробнее ниже
           </h1>
           <p
             id="scrollDownBtn"
@@ -139,22 +139,21 @@
         </div>
       </div>
     </header>
-    <section
-      id="turkey-tour"
-      class="bg-cover bg-center text-white py-16"
-    >
-    <h2 class="text-black text-center text-4xl font-serif font-bold mb-4">
-      Я очень люблю Турцию и особенно Стамбул и сейчас я могу предложить Вам
-      увидеть это все своими глазами
-    </h2>
+    <section id="turkey-tour" class="bg-cover bg-center text-white py-16">
+      <h2 class="text-black text-center text-4xl font-serif font-bold mb-4">
+        Я очень люблю Турцию и особенно Стамбул и сейчас я могу предложить Вам
+        увидеть это все своими глазами
+      </h2>
       <div class="bg-cover" style="background-image: url('./img/yt.jpg')">
         <div
           class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 md:rounded-lg"
         >
           <h2 class="text-xl font-bold mb-6">
-            Специальное предложение для оптовых покупателей: Сделайте закуп на
-            сумму от $3000 и получите невероятный бонус — отдых в Турции на
-            двоих в ПОДАРОК!
+            Специальное предложение для оптовых покупателей: <br />
+            <span class="font-extrabold">
+              Сделайте закуп на сумму от $3000 и получите невероятный бонус —
+              отдых в Турции на двоих в ПОДАРОК!
+            </span>
           </h2>
           <p class="text-lg font-light mb-8">
             🌟 Экскурсионный тур “Анталия-Памуккале-Каппадокия”
