--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <p
             class="max-md:leading-5 text-center animate-fadeInUp mt-4 text-gray-100 text-xl md:text-2xl font-serif font-semibold"
           >
-            Мои услуги: <br />
+            <span class="text-2xl font-bold"> Мои услуги: <br /> </span>
             - Оптовые поставки <br />
             - Производство под вашим брендом <br />
             - Личное сопровождение на закупках <br />
@@ -800,7 +800,7 @@
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Закупка одежды от $2000 до $5000
           </h3>
-          <p class="text-xl text-gray-700">7% от суммы заказа</p>
+          <p class="text-xl text-gray-700">5% от суммы заказа</p>
         </div>
         <div class="p-6 border-b-2 mx-3 md:rounded-xl">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
