--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
             Я — Юля, Ваш личный байер по оптовым закупкам в Турции
           </h1>
           <p
-            class="max-md:leading-5 text-center animate-fadeInUp mt-4 text-gray-100 text-xl md:text-2xl font-serif font-semibold"
+            class="text-center animate-fadeInUp mt-4 text-gray-100 text-xl md:text-2xl font-serif font-semibold"
           >
             <span class="text-2xl font-bold"> Мои услуги: <br /> </span>
             - Оптовые поставки <br />
             - Производство под вашим брендом <br />
             - Личное сопровождение на закупках <br />
-            - Подбор карго и отправка заказа <br />
+            - Подбор карго и отправка заказа по всему миру<br />
           </p>
         </div>
         <div class="relative">
@@ -227,39 +227,39 @@
           <div
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border md:rounded-3xl hover:shadow-xl transition duration-300"
           >
-            <h3 class="text-2xl font-serif text-slate-800">
+            <h3 class="text-2xl font-serif text-slate-800 leading-6">
               Оптовые поставки<br />
-              <span class="font-thin text-sm leading-none">
-                Зачем искать поставщиков самостоятельно и тратить на это время?
-              </span>
             </h3>
+            <p class="font-medium text-lg leading-6">
+              Зачем искать поставщиков самостоятельно и тратить на это время?
+            </p>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
-            <p class="text-gray-700 font-[100] text-md">
+            <h3 class="text-2xl text-slate-800">
               Подберу под ваш запрос: <br />
+            </h3>
+            <p class="text-gray-700 font-semibold text-lg leading-6">
               - Женскую, мужскую и детскую одежду <br />
               - Кожаные куртки, сумки и обувь <br />
               - Текстиль для дома
             </p>
             <div class="w-1/2 h-[1px] bg-slate-500 mt-2"></div>
             <h3 class="text-2xl font-serif text-slate-800">Мои гарантии:</h3>
-            <p class="text-gray-700 font-[100] text-md">
-              Аудит фабрик и проверка качества<br />
-              Полный контроль от выбора до отправки.
+            <p class="text-gray-700 font-semibold text-lg">
+              - Аудит фабрик и проверка качества<br />
+              - Полный контроль от выбора до отправки.
             </p>
           </div>
           <div
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border md:rounded-3xl hover:shadow-xl transition duration-300"
           >
-            <h3 class="text-2xl font-serif text-slate-800">
+            <h3 class="text-2xl font-serif text-slate-800 leading-6">
               Производство под вашим брендом<br />
-              <span class="text-sm font-thin leading-1"
-                >Мечтаете создать свою коллекцию<span class="font-medium"
-                  >?!</span
-                >
-              </span>
             </h3>
+            <p class="text-lg leading-6 mt-1">
+              Мечтаете создать свою коллекцию?!
+            </p>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
-            <p class="text-gray-700 font-[100] text-md">
+            <p class="text-gray-700 font-semibold text-lg leading-6">
               - Найду фабрику для работы по вашим образцам
               <br />
               - Организую пошив тестового образца <br />
@@ -271,16 +271,16 @@
           <div
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border md:rounded-3xl hover:shadow-xl transition duration-300"
           >
-            <h3 class="text-2xl font-serif text-slate-800">
+            <h3 class="text-2xl font-serif text-slate-800 leading-6">
               Личное сопровождение на закупках
-              <span class="text-sm font-thin leading-1"
-                ><br />Пройдем с Вами по заранее оговоренным магазинам и
-                фабрикам <br />вместе с Вами закупим одежду или посетим
-                фабрики<span class="font-medium">:</span>
-              </span>
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
-            <p class="text-gray-700 font-[100] text-md">
+            <p class="text-lg font-semibold leading-6 text-gray-700 mt-1">
+              Пройдем с вами по заранее оговоренным магазинам и фабрикам, вместе
+              с вами закупим одежду или посетим фабрики:
+            </p>
+            <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
+            <p class="text-gray-700 text-lg font-semibold leading-6">
               - Я организую встречи с производителями
               <br />
               - Проведу переговоры и помогу получить лучшие условия
@@ -705,11 +705,11 @@
             </li>
             <li class="text-xl font-medium text-gray-800">
               ✅ <strong>Большая база производителей</strong> только лучшие
-              поставщики.
+              поставщики
             </li>
             <li class="text-xl font-medium text-gray-800">
-              ✅ <strong>Экономия времени и денег:</strong> я беру на себя всю
-              организацию.
+              ✅ <strong>Экономия времени и денег: </strong> я беру на себя всю
+              организацию
             </li>
             <li class="text-xl font-medium text-gray-800">
               ✅
