--- a/index.html
+++ b/index.html
@@ -140,21 +140,17 @@
       </div>
     </header>
     <section id="turkey-tour" class="bg-cover bg-center text-white py-16">
-      <h2 class="text-black text-center text-4xl font-serif font-bold mb-4">
-        Я очень люблю Турцию и особенно Стамбул и сейчас я могу предложить Вам
-        увидеть это все своими глазами
+      <h2 class="text-xl font-bold mb-6">
+        Специальное предложение для оптовых покупателей: <br />
+        <span class="font-extrabold">
+          Сделайте закуп на сумму от $3000 и получите невероятный бонус —
+          отдых в Турции на двоих в ПОДАРОК!
+        </span>
       </h2>
       <div class="bg-cover" style="background-image: url('./img/yt.jpg')">
         <div
           class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 md:rounded-lg"
         >
-          <h2 class="text-xl font-bold mb-6">
-            Специальное предложение для оптовых покупателей: <br />
-            <span class="font-extrabold">
-              Сделайте закуп на сумму от $3000 и получите невероятный бонус —
-              отдых в Турции на двоих в ПОДАРОК!
-            </span>
-          </h2>
           <p class="text-lg font-light mb-8">
             🌟 Экскурсионный тур “Анталия-Памуккале-Каппадокия”
           </p>
@@ -206,6 +202,11 @@
               </h3>
               <p>Историк от Министерства Туризма</p>
             </div>
+          </div>
+          <div class="mt-8 p-4 bg-white/40 text-gray-800 md:rounded-lg shadow-lg font-bold text-xl mx-auto max-w-md">
+            <p class="text-center">
+              <span class="text-zinc-800">✈️ Авиаперелеты, обеды и ужины оплачиваются отдельно</span>
+            </p>
           </div>
         </div>
       </div>
@@ -331,19 +332,6 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="16"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="17"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="18"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="19"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="20"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="21"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="22"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="23"></li>
         </ol>
         <div class="carousel-inner container mx-auto mb-12">
           <div class="carousel-item active">
@@ -355,126 +343,49 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/IMG_7778.JPG"
+              src="./img/IMG_8605.JPG"
               class="md:rounded d-block w-100"
               alt="./img/01.png"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./img/IMG_7777.JPG"
+              src="./img/IMG_8614.JPG"
               class="md:rounded d-block w-100"
               alt="./img/01.png"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./img/IMG_7780.JPG"
+              src="./img/IMG_8615.JPG"
               class="md:rounded d-block w-100"
               alt="./img/01.png"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./img/IMG_7786.JPG"
+              src="./img/IMG_8619.JPG"
               class="md:rounded d-block w-100"
               alt="./img/01.png"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./img/6.png"
+              src="./img/IMG_8625.JPG"
               class="md:rounded d-block w-100"
               alt="./img/01.png"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./img/IMG_7724.PNG"
+              src="./img/IMG_8627.JPG"
               class="md:rounded d-block w-100"
               alt="./img/01.png"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./img/IMG_7726.PNG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7790.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7779.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7781.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7782.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7783.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7784.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7785.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7786.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7787.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7788.JPG"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/IMG_7789.JPG"
+              src="./img/IMG_8631.JPG"
               class="md:rounded d-block w-100"
               alt="./img/01.png"
             />
@@ -495,35 +406,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/2.png"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/7.png"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
               src="./img/8.png"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/9.png"
-              class="md:rounded d-block w-100"
-              alt="./img/01.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/4.png"
               class="md:rounded d-block w-100"
               alt="./img/01.png"
             />
@@ -828,7 +711,11 @@
       </a>
     </div>
 
-    <div class="flex items-center justify-center sm:p-10 md:p-20 mt-10">
+    <div class="flex flex-col items-center justify-center sm:p-10 md:p-20 mt-10">
+      <h2 class="text-black text-center text-xl font-serif font-bold mb-4">
+        Я очень люблю Турцию и особенно Стамбул и сейчас я могу предложить Вам
+        увидеть это все своими глазами
+      </h2>
       <div class="relative w-full" style="padding-bottom: 56.25%">
         <iframe
           class="absolute top-0 left-0 w-full h-full"
