--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
       </div>
     </section>
-    <section id="turkey-tour" class="bg-cover bg-center text-zinc-800 py-16">
+    <section id="turkey-tour" class="bg-cover bg-center text-zinc-800 pt-4 pb-16">
       <h2 class="text-2xl text-center font-extrabold mb-6">
         Специальное предложение для оптовых покупателей: <br />
         <span class="text-xl font-abold">
